--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "draft-js": "^0.10.5",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-google-login": "^5.0.4",
     "react-markdown": "^4.0.6",
     "react-mde": "^7.3.2",
     "react-redux": "^6.0.1",
